[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/svg/circle.svg" type="Texture" id=1]
[ext_resource path="res://entities/catch/catch.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14, 14 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 11, 11 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 7.5, 7.5 )

[node name="right" type="Node2D"]
process_priority = 2
script = ExtResource( 2 )

[node name="Okay" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3
priority = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Okay"]
shape = SubResource( 1 )

[node name="Good" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3
priority = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Good"]
shape = SubResource( 2 )

[node name="Perfect" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3
priority = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Perfect"]
shape = SubResource( 3 )

[node name="Circle2" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( -9.53674e-07, 9.53674e-07 )
scale = Vector2( 1.1875, 1.25 )
texture = ExtResource( 1 )

[node name="Circle" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[connection signal="area_entered" from="Okay" to="." method="_on_Okay_area_entered"]
[connection signal="area_exited" from="Okay" to="." method="_on_Okay_area_exited"]
[connection signal="area_entered" from="Good" to="." method="_on_Good_area_entered"]
[connection signal="area_exited" from="Good" to="." method="_on_Good_area_exited"]
[connection signal="area_entered" from="Perfect" to="." method="_on_Perfect_area_entered"]
